# nlp-kupujem-prodajem-search

./: README.md  high-level-overview.drawio  package.json
ad-ingestion/: Dockerfile  build.gradle  settings.gradle
ad-ingestion/src/main/resources/: application.yml
analyzer/: .gitattributes  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
analyzer/analyzer/: __init__.py  es.py  paths.py  pipeline.py  predictor.py  server.py  utils.py  wsgi.py
analyzer/analyzer/category/: model.py  predictor.py  train.py  train_tf.py  transform.py
analyzer/analyzer/data/: fetch.py  transform.py
analyzer/analyzer/location/: locations  model.py  predictor.py  processing.py  train.py
analyzer/analyzer/price/: parser.py
analyzer/analyzer/wv/: train.py
analyzer/price/: parser.py
analyzer/tests/: conftest.py  test_utils.py
analyzer/tests/location/: test_processing.py
analyzer/tests/price/: test_parser.py
api/: build.gradle  package-lock.json  package.json
api/src/: index.ts
api/src/main/java/com/kupujem/prodajem/nlp/api/: ApiApplication.java
api/src/main/resources/: application.yml
demo/: .gitignore  README.md  transform_ads.py
frontend/kp-nlp/: Dockerfile  README.md  angular.json  karma.conf.js  package-lock.json  package.json  start.sh
frontend/kp-nlp/e2e/src/: app.e2e-spec.ts
frontend/kp-nlp/src/: index.html
frontend/kp-nlp/src/app/: app.component.spec.ts  app.component.ts  app.module.ts
frontend/kp-nlp/src/app/search/: search.component.css  search.component.html  search.component.ts
frontend/kp-nlp/src/environments/: environment.prod.ts
ingestion/: Dockerfile  package-lock.json  package.json  tslint.json
ingestion-node/: package-lock.json  package.json
ingestion-node/src/kafka/: kafka-properties.js  producer.ts
ingestion/src/: index.ts
ingestion/src/model/: Ad.ts
operations/elastic/: README.md  docker-compose.yml
operations/ingestion/: docker-compose.yml
operations/kafka/: docker-compose.yml
operations/services/: docker-compose.yml
parser/: .gitignore  parse.py  pyproject.toml
parser/notebooks/: 00_initial_eda.ipynb
search/: .gitignore  Makefile  README.md  es.py  paths.py  pyproject.toml  train.py
search/analyzer/: server.py  utils.py
search/analyzer/category/: model.py  train.py  train_tf.py  transform.py
search/analyzer/location/: model.py
search/analyzer/wv/: train.py
search/data/: __init__.py  fetch.py  transform.py
src/: index.ts
src/model/: Ad.ts
websocket-collector/: Dockerfile  build.gradle  settings.gradle
websocket-collector/src/main/resources/: application.yml
(+26 files in other folders)
