[tool.poetry]
name = "nlp-kp-search-engine"
version = "0.1.0"
description = "The NLP based search engine for KupujemProdajem.com ads from websocket feed."
authors = ["Nemanja Milicevic <the.nemanja.milicevic@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.3"
fasttext = "^0.9.1"
elasticsearch = "^7.6.0"
click = "^7.1.2"
pandarallel = "^1.4.8"
numpy = "^1.18.3"
flask = "^1.1.2"
gunicorn = "^20.0.4"
scikit-learn = "^0.22.2"
price-parser = "^0.3.3"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.2"
jupyter = "^1.0.0"
matplotlib = "^3.2.1"
seaborn = "^0.10.0"
tensorflow = "==2.1.0"
tensorflow-estimator = "==2.1.0"
mypy = "^0.770"
pytest = "^5.4.2"

[build-system]
requires = ["poetry>=1.0.4"]
build-backend = "poetry.masonry.api"
