[tool.poetry]
name = "parser"
version = "0.1.0"
description = "The parser for KupujemProdajem.com ads from websocket feed."
authors = ["Nemanja Milicevic <the.nemanja.milicevic@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.9.0"
lxml = "^4.5.0"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
