[tool.poetry]
name = "nlp-kp-search-engine"
version = "0.1.0"
description = "The NLP based search engine for KupujemProdajem.com ads from websocket feed."
authors = ["Nemanja Milicevic <the.nemanja.milicevic@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
lxml = "^4.5.0"
pandas = "^1.0.3"
fasttext = "^0.9.1"
elasticsearch = "^7.6.0"
click = "^7.1.2"
pandarallel = "^1.4.8"
numpy = "^1.18.3"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.2"
jupyter = "^1.0.0"
matplotlib = "^3.2.1"
seaborn = "^0.10.0"
tensorflow = "==2.1.0"
tensorflow-estimator = "==2.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
